--- a/holaweb.html
+++ b/holaweb.html
@@ -6,6 +6,7 @@
 <body>
 	<h1>hola web</h1>
 	<h5>realizado por: IcK</h5>
+	<h6>5to siclo</h6>
 	<p>primer ejemplo de hypertexto desarrollado por <strong>Erick Joshep</strong></p>
 	<h4>Per&uacute;</h4>
 	<img src="./img/dj.jpg" width="600" height="300">
